--- a/src/front-end/home-page/styles/header/header.css
+++ b/src/front-end/home-page/styles/header/header.css
@@ -1,4 +1,4 @@
-div.search-container > div, header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
+header > div:last-of-type, header > div:first-of-type > div:first-of-type > div, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
   padding-right: 24.5px !important;
   padding-left: 24.5px !important;
 }
@@ -11,103 +11,20 @@ header > div:last-of-type > button, header > div:first-of-type > div:last-of-typ
   font-size: 17.5px;
 }
 
-div.product-container {
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  min-width: 280px;
-  max-width: 100%;
-  width: 100%;
-  border-radius: 14px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-  overflow: hidden;
+header > div:last-of-type > button, header > div:first-of-type > div:last-of-type > button {
+  width: 42px;
+  min-width: 42px;
+  height: 42px;
+  min-height: 42px;
+  border-radius: 100%;
+  transition: ease-in-out 0.35s;
 }
-div.product-container > div:first-of-type {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 28px;
-  background-color: white;
-  padding: 21px;
-}
-div.product-container > div:first-of-type > div:first-of-type {
-  width: 100%;
-  padding-bottom: 14px;
-}
-div.product-container > div:first-of-type > div:first-of-type button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5.6px;
-  width: -moz-fit-content;
-  width: fit-content;
-  border-radius: 7px;
-  font-size: 11.9px;
-  padding: 6.3px 10.5px;
-  font-family: var(--font-bold);
-  background-color: var(--primary-color);
-  color: white;
-}
-div.product-container > div:first-of-type > div:first-of-type button i {
-  color: white;
-  font-size: 11.9px;
-}
-div.product-container > div:first-of-type img {
-  width: 189px;
-  height: 189px;
-  border-radius: 14px;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-div.product-container > div:first-of-type > div:last-of-type {
-  display: flex;
-  flex-direction: column;
-}
-div.product-container > div:first-of-type > div:last-of-type p {
-  text-align: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-div.product-container > div:first-of-type > div:last-of-type p.product-container__name {
-  color: var(--regular-gray);
-  font-size: 19.6px;
-  font-family: var(--font-bold);
-  padding: 0px 0px 5.6px 0px;
-}
-div.product-container > div:first-of-type > div:last-of-type p.product-container__old-price {
-  color: var(--regular-gray);
-  text-decoration: line-through;
-  font-size: 17.5px;
-  filter: opacity(70%);
-}
-div.product-container > div:first-of-type > div:last-of-type p.product-container__price {
-  color: var(--regular-green);
-  font-size: 28px;
-  font-family: var(--font-bold);
-}
-div.product-container > div:first-of-type > div:last-of-type p.product-container__installment {
-  color: var(--regular-gray);
-  font-size: 17.5px;
-}
-div.product-container a {
-  display: flex;
-  gap: 5.6px;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  padding: 17.5px 0px;
-  font-size: 17.5px;
-  font-family: var(--font-bold);
-  background-color: var(--regular-green);
-}
-div.product-container a i {
-  font-size: 21px;
+header > div:last-of-type > button:hover, header > div:first-of-type > div:last-of-type > button:hover {
+  background-color: rgba(0, 0, 0, 0.089);
 }
 
 @media (min-width: 700px) {
-  div.search-container > div, header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
+  header > div:last-of-type, header > div:first-of-type > div:first-of-type > div, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
     padding-right: 35px !important;
     padding-left: 35px !important;
   }
@@ -119,7 +36,7 @@ div.product-container a i {
   }
 }
 @media (min-width: 1000px) {
-  div.search-container > div, header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
+  header > div:last-of-type, header > div:first-of-type > div:first-of-type > div, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
     padding-right: 84px !important;
     padding-left: 84px !important;
   }
@@ -131,7 +48,7 @@ div.product-container a i {
   }
 }
 @media (min-width: 1200px) {
-  div.search-container > div, header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
+  header > div:last-of-type, header > div:first-of-type > div:first-of-type > div, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
     padding-right: 140px !important;
     padding-left: 140px !important;
   }
@@ -148,7 +65,7 @@ header > div:first-of-type {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 28px 0px;
+  padding: 21px 0px;
   background-color: var(--primary-color);
 }
 header > div:first-of-type > img:first-of-type {
@@ -159,7 +76,7 @@ header > div:first-of-type > div:first-of-type {
 }
 header > div:first-of-type > div:last-of-type {
   display: flex;
-  gap: 21px;
+  gap: 7px;
 }
 header > div:first-of-type > div:last-of-type > button {
   color: white;
@@ -171,7 +88,7 @@ header > div:last-of-type {
   display: flex;
   align-items: center;
   width: 100%;
-  gap: 14px;
+  gap: 7px;
   background-color: var(--light-gray);
   padding: 10.5px 0px;
 }
@@ -183,27 +100,33 @@ div.search-container {
   width: 100%;
   position: relative;
 }
+div.search-container.--on > input {
+  border-radius: 14px 14px 0px 0px;
+}
 div.search-container > input {
   width: 100%;
   border: 0px;
-  border-radius: 7px;
-  padding: 3.5px 10.5px;
+  border-radius: 21px;
+  padding: 5.6px 11.2px;
+  font-size: 13.3px;
+  color: var(--dark-gray);
+}
+div.search-container > input.--none {
+  color: red;
 }
 div.search-container > input:focus {
   outline: none;
 }
 div.search-container > div {
   width: 100%;
-  transform: translateX(-50%);
   position: absolute;
-  left: 50%;
+  left: 0px;
 }
 div.search-container > div > div {
   background-color: white;
-  border-radius: 0px 0px 7px 7px;
+  border-radius: 0px 0px 14px 14px;
 }
-
-button.search-container__product {
+div.search-container > div > div > button {
   display: flex;
   justify-content: left;
   align-items: center;
@@ -212,7 +135,7 @@ button.search-container__product {
   padding: 21px 14px;
   position: relative;
 }
-button.search-container__product:not(:last-of-type)::after {
+div.search-container > div > div > button:not(:last-of-type)::after {
   content: "";
   width: 91%;
   height: 1px;
@@ -222,22 +145,23 @@ button.search-container__product:not(:last-of-type)::after {
   left: 50%;
   bottom: 0px;
 }
-button.search-container__product > img {
+div.search-container > div > div > button > img {
   width: 73.5px;
   height: 73.5px;
   -o-object-fit: contain;
      object-fit: contain;
 }
-button.search-container__product > div p {
+div.search-container > div > div > button > div p {
+  cursor: pointer;
   line-height: 140%;
   text-align: left;
   font-family: var(--font-bold);
 }
-button.search-container__product > div > p:first-of-type {
+div.search-container > div > div > button > div > p:first-of-type {
   color: var(--regular-gray);
   font-size: 17.5px;
 }
-button.search-container__product > div > p:last-of-type {
+div.search-container > div > div > button > div > p:last-of-type {
   color: var(--regular-green);
   font-size: 25.9px;
 }
@@ -253,6 +177,6 @@ button.search-container__product > div > p:last-of-type {
     display: none;
   }
   div.search-container > input {
-    padding: 4.9px 10.5px;
+    font-size: 14px;
   }
 }/*# sourceMappingURL=header.css.map */
