--- a/src/front-end/home-page/styles/footer/footer.scss
+++ b/src/front-end/home-page/styles/footer/footer.scss
@@ -1,7 +1,7 @@
-@import "../global/global";
+@import '../global/global';
 
 footer {
-     @extend %default-padding-size;
+	@extend %default-padding-size;
 	width: 100%;
 	padding: 119px 0px 28px 0px;
 	background-color: var(--primary-color);
@@ -9,7 +9,7 @@ footer {
 
 	& > div:first-of-type {
 		width: 100%;
-          height: 100px;
+		height: 100px;
 		overflow: hidden;
 		transform: translateX(-50%);
 		position: absolute;
@@ -21,7 +21,7 @@ footer {
 		}
 	}
 
-     & > div:last-of-type {
+	& > div:last-of-type {
 		display: flex;
 		justify-content: center;
 
@@ -33,39 +33,45 @@ footer {
 			width: 100%;
 			max-width: 385px;
 
-               h1 {
-                    @extend %big-font-size;
-                    color: white;
-               }
+			h1 {
+				@extend %big-font-size;
+				color: white;
+			}
 
-               p {
-                    color: white;
+			p {
+				color: white;
 				padding: 0px 0px 21px 0px;
-               }
+			}
 
-               a {
-                    display: flex;
-                    gap: 5.6px;
-                    align-items: center;
-                    justify-content: center;
-                    width: 100%;
-                    color: var(--primary-color);
-                    background-color: white;
-                    padding: 16.8px 0px;
-                    font-size: 15.4px;
-                    font-family: var(--font-bold);
-                    border-radius: 70px;
+			a {
+				&:hover {
+					background-color: var(--primary-color);
+					color: white;
+				}
 
-                    i {
-                         font-size: 18.9px;
-                    }
-               }
+				background-color: white;
+				color: var(--primary-color);
+				transition: ease-in-out 0.35s;
+				border: 2px solid white;
+				display: flex;
+				gap: 5.6px;
+				align-items: center;
+				justify-content: center;
+				width: 100%;
+				padding: 16.8px 0px;
+				font-size: 15.4px;
+				font-family: var(--font-bold);
+				border-radius: 70px;
 
-               & > div:first-of-type {
-                    display: flex;
+				i {
+					font-size: 18.9px;
+				}
+			}
+
+			& > div:first-of-type {
+				display: flex;
 				gap: 7px;
-               }
-          }
-     }
+			}
+		}
+	}
 }
-
