--- a/src/front-end/home-page/styles/global/global.scss
+++ b/src/front-end/home-page/styles/global/global.scss
@@ -1,178 +1,201 @@
 %default-padding-size {
-     padding-right: 24.5px !important;
-     padding-left: 24.5px !important;
+	padding-right: 24.5px !important;
+	padding-left: 24.5px !important;
 }
 
 %default-height-size {
-     height: 17.5px;
+	height: 17.5px;
 }
 
 %big-height-size {
-     height: 20.3px;
+	height: 20.3px;
 }
 
 %small-font-size {
-     font-size: 11.2px;
+	font-size: 11.2px;
 }
 
 %default-font-size {
-     font-size: 17.5px;
+	font-size: 17.5px;
 }
 
 %big-font-size {
-     font-size: 28px;
+	font-size: 28px;
 }
 
-div.product-container {
-     z-index: 2;
-     display: flex;
+%icon-button {
+	&:hover {
+		background-color: rgba(0, 0, 0, 0.089);
+	}
+
+	@extend %default-font-size;
+	width: 42px;
+	min-width: 42px;
+	height: 42px;
+	min-height: 42px;
+	border-radius: 100%;
+	transition: ease-in-out 0.35s;
+}
+
+%product-container {
+	z-index: 2;
+	display: flex;
 	flex-direction: column;
 	min-width: 280px;
 	max-width: 100%;
-     width: 100%;
+	width: 100%;
 	border-radius: 14px;
 	user-select: none;
 	overflow: hidden;
 
-     & > div:first-of-type {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          gap: 28px;
-          background-color: white;
-          padding: 21px;
+	& > div:first-of-type {
+		display: flex;
+		height: 100%;
+		flex-direction: column;
+		align-items: center;
+		gap: 28px;
+		background-color: white;
+		padding: 21px;
 
-          & > div:first-of-type {
-               width: 100%;
-               padding-bottom: 14px;
+		& > div:first-of-type {
+			width: 100%;
+			padding-bottom: 14px;
 
-               button {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    gap: 5.6px;
-                    width: fit-content;
-                    border-radius: 7px;
-                    font-size: 11.9px;
-                    padding: 6.3px 10.5px;
-                    font-family: var(--font-bold);
-                    background-color: var(--primary-color);
-                    color: white;
+			button {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				gap: 5.6px;
+				width: fit-content;
+				border-radius: 7px;
+				font-size: 11.9px;
+				padding: 6.3px 10.5px;
+				font-family: var(--font-bold);
+				background-color: var(--primary-color);
+				color: white;
 
-                    i {
-                         color: white;
-                         font-size: 11.9px;
-                    }
-               }
+				i {
+					color: white;
+					font-size: 11.9px;
+				}
+			}
+		}
+
+		img {
+			width: 182px;
+			height: 182px;
+			border-radius: 14px;
+			object-fit: contain;
+		}
+
+		& > div:last-of-type {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			height: 100%;
+
+			p {
+				text-align: center;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+
+			& > p:first-of-type {
+				color: var(--regular-gray);
+				font-size: 19.6px;
+				font-family: var(--font-bold);
+				padding: 0px 0px 5.6px 0px;
+			}
+
+			& > p:nth-of-type(2) {
+				color: var(--regular-gray);
+				text-decoration: line-through;
+				font-size: 17.5px;
+				filter: opacity(70%);
+			}
+
+			& > p:nth-of-type(3) {
+				color: var(--regular-green);
+				font-size: 28px;
+				font-family: var(--font-bold);
+			}
+
+			& > p:last-of-type {
+				color: var(--regular-gray);
+				font-size: 17.5px;
+				filter: opacity(70%);
+			}
+		}
+	}
+
+	a {
+          &:hover {
+               background-color: var(--dark-green);
           }
 
-          img {
-               width: 189px;
-               height: 189px;
-               border-radius: 14px;
-               object-fit: contain;
-          }
+		display: flex;
+		gap: 5.6px;
+		align-items: center;
+		justify-content: center;
+		color: white;
+		padding: 18.9px 0px;
+		font-size: 17.5px;
+		font-family: var(--font-bold);
+		background-color: var(--regular-green);
+          transition: ease-in-out 0.35s;
 
-          & > div:last-of-type {
-               display: flex;
-               flex-direction: column;
-
-               p {
-                    text-align: center;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-               }
-
-               p.product-container__name {
-                    color: var(--regular-gray);
-                    font-size: 19.6px;
-                    font-family: var(--font-bold);
-                    padding: 0px 0px 5.6px 0px;
-               }
-
-               p.product-container__old-price {
-                    color: var(--regular-gray);
-                    text-decoration: line-through;
-                    font-size: 17.5px;
-                    filter: opacity(70%);
-               }
-
-               p.product-container__price {
-                    color: var(--regular-green);
-                    font-size: 28px;
-                    font-family: var(--font-bold);
-               }
-
-               p.product-container__installment {
-                    color: var(--regular-gray);
-                    font-size: 17.5px;
-               }
-          }
-     }
-
-     a {
-          display: flex;
-          gap: 5.6px;
-          align-items: center;
-          justify-content: center;
-          color: white;
-          padding: 17.5px 0px;
-          font-size: 17.5px;
-          font-family: var(--font-bold);
-          background-color: var(--regular-green);
-
-          i {
-               font-size: 21px;
-          }
-     }
+		i {
+			font-size: 21px;
+		}
+	}
 }
 
-
 @media (min-width: 700px) {
-     %default-padding-size {
-          padding-right: 35px !important;
-          padding-left: 35px !important;
-     }
+	%default-padding-size {
+		padding-right: 35px !important;
+		padding-left: 35px !important;
+	}
 
-     %default-height-size {
-          height: 18.9px;
-     }
+	%default-height-size {
+		height: 18.9px;
+	}
 
-     %big-height-size {
-          height: 21px;
-     }
+	%big-height-size {
+		height: 21px;
+	}
 
-     %default-font-size {
-          font-size: 18.9px;
-     }
+	%default-font-size {
+		font-size: 18.9px;
+	}
 
-     %big-font-size {
-          font-size: 31.5px;
-     }
+	%big-font-size {
+		font-size: 31.5px;
+	}
 }
 
 @media (min-width: 1000px) {
-     %default-padding-size {
-          padding-right: 84px !important;
-          padding-left: 84px !important;
-     }
+	%default-padding-size {
+		padding-right: 84px !important;
+		padding-left: 84px !important;
+	}
 
-     %default-height-size {
-          height: 19.6px;
-     }
+	%default-height-size {
+		height: 19.6px;
+	}
 
-     %default-font-size {
-          font-size: 19.6px;
-     }
+	%default-font-size {
+		font-size: 19.6px;
+	}
 
-     %big-height-size {
-          height: 22.4px;
-     }
+	%big-height-size {
+		height: 22.4px;
+	}
 }
 
 @media (min-width: 1200px) {
-     %default-padding-size {
-          padding-right: 140px !important;
-          padding-left: 140px !important;
-     }
+	%default-padding-size {
+		padding-right: 140px !important;
+		padding-left: 140px !important;
+	}
 }
