--- a/src/front-end/home-page/styles/header/header.scss
+++ b/src/front-end/home-page/styles/header/header.scss
@@ -1,159 +1,174 @@
-@import "../global/global.scss";
+@import '../global/global.scss';
 
 header {
-     z-index: 3;
-     width: 100%;
-     position: fixed;
-     top: 0px;
-     left: 0px;
+	z-index: 3;
+	width: 100%;
+	position: fixed;
+	top: 0px;
+	left: 0px;
 
-     & > div:first-of-type {
-          @extend %default-padding-size;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          width: 100%;
-          padding: 28px 0px;
-          background-color: var(--primary-color);
+	& > div:first-of-type {
+		@extend %default-padding-size;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		width: 100%;
+		padding: 21px 0px;
+		background-color: var(--primary-color);
 
-          & > img:first-of-type {
-               @extend %default-height-size;
-               filter: grayscale(100%) brightness(200%);
-          }
+		& > img:first-of-type {
+			@extend %default-height-size;
+			filter: grayscale(100%) brightness(200%);
+		}
 
-          & > div:first-of-type {
-               @extend %default-padding-size;
-               display: none;
-          }
+		& > div:first-of-type {
+			@extend %default-padding-size;
+			display: none;
 
-          & > div:last-of-type {
-               display: flex;
-               gap: 21px;
+			& > div {
+				@extend %default-padding-size;
+			}
+		}
 
-               & > button {
-                    @extend %default-font-size;
-                    color: white;
-               }
+		& > div:last-of-type {
+			display: flex;
+			gap: 7px;
 
-               & > button:last-of-type {
-                    display: none;
-               }
-          }
-     }
+			& > button {
+				@extend %icon-button;
+				color: white;
+			}
 
-     & > div:last-of-type {
-          @extend %default-padding-size;
-          display: flex;
-          align-items: center;
-          width: 100%;
-          gap: 14px;
-          background-color: var(--light-gray);
-          padding: 10.5px 0px;
+			& > button:last-of-type {
+				display: none;
+			}
+		}
+	}
 
-          & > button {
-               @extend %default-font-size;
-               color: var(--primary-color);
-          }
-     }
+	& > div:last-of-type {
+		@extend %default-padding-size;
+		display: flex;
+		align-items: center;
+		width: 100%;
+		gap: 7px;
+		background-color: var(--light-gray);
+		padding: 10.5px 0px;
+
+		& > button {
+			@extend %icon-button;
+			color: var(--primary-color);
+		}
+	}
 }
 
 div.search-container {
-     width: 100%;
-     position: relative;
+	&.--on {
+		& > input {
+			border-radius: 14px 14px 0px 0px;
+		}
+	}
 
-     & > input {
-          &:focus {
-               outline: none;
-          }
+	width: 100%;
+	position: relative;
 
-          width: 100%;
-          border: 0px;
-          border-radius: 7px;
-          padding: 3.5px 10.5px;
-     }
+	& > input {
+		&.--none {
+			color: red;
+		}
 
-     & > div {
-          @extend %default-padding-size;
-          width: 100%;
-          transform: translateX(-50%);
-          position: absolute;
-          left: 50%;
+		&:focus {
+			outline: none;
+		}
 
-          & > div {
-               background-color: white;
-               border-radius: 0px 0px 7px 7px;
-          }
-     }
-}
+		width: 100%;
+		border: 0px;
+		border-radius: 21px;
+		padding: 5.6px 11.2px;
+		font-size: 13.3px;
+		color: var(--dark-gray);
+	}
 
-button.search-container__product {
-     &:not(:last-of-type)::after {
-          content: "";
-          width: 91%;
-          height: 1px;
-          background-color: rgb(219, 219, 219);
-          transform: translateX(-50%);
-          position: absolute;
-          left: 50%;
-          bottom: 0px;
-     }
+	& > div {
+		width: 100%;
+		position: absolute;
+		left: 0px;
 
-     display: flex;
-     justify-content: left;
-     align-items: center;
-     gap: 14px;
-     width: 100%;
-     padding: 21px 14px;
-     position: relative;
+		& > div {
+			background-color: white;
+			border-radius: 0px 0px 14px 14px;
 
-     & > img {
-          width: 73.5px;
-          height: 73.5px;
-          object-fit: contain;
-     }
+			& > button {
+				&:not(:last-of-type)::after {
+					content: '';
+					width: 91%;
+					height: 1px;
+					background-color: rgb(219, 219, 219);
+					transform: translateX(-50%);
+					position: absolute;
+					left: 50%;
+					bottom: 0px;
+				}
 
-     & > div {
-          p {
-               line-height: 140%;
-               text-align: left;
-               font-family: var(--font-bold);
-          }
+				display: flex;
+				justify-content: left;
+				align-items: center;
+				gap: 14px;
+				width: 100%;
+				padding: 21px 14px;
+				position: relative;
 
-          & > p:first-of-type {
-               color: var(--regular-gray);
-               font-size: 17.5px;
-          }
+				& > img {
+					width: 73.5px;
+					height: 73.5px;
+					object-fit: contain;
+				}
 
-          & > p:last-of-type {
-               color: var(--regular-green);
-               font-size: 25.9px;
-          }
-     }
+				& > div {
+					p {
+						cursor: pointer;
+						line-height: 140%;
+						text-align: left;
+						font-family: var(--font-bold);
+					}
+
+					& > p:first-of-type {
+						color: var(--regular-gray);
+						font-size: 17.5px;
+					}
+
+					& > p:last-of-type {
+						color: var(--regular-green);
+						font-size: 25.9px;
+					}
+				}
+			}
+		}
+	}
 }
 
 //@media
 @media (min-width: 700px) {
-     header {
-          & > div:first-of-type {
-               & > div:first-of-type {
-                    display: block;
-               }
+	header {
+		& > div:first-of-type {
+			& > div:first-of-type {
+				display: block;
+			}
 
-               & > div:last-of-type {
-                    & > button:last-of-type {
-                         display: block;
-                    }
-               }
-          }
+			& > div:last-of-type {
+				& > button:last-of-type {
+					display: block;
+				}
+			}
+		}
 
-          & > div:last-of-type {
-               display: none;
-          }
-     }
+		& > div:last-of-type {
+			display: none;
+		}
+	}
 
-     div.search-container {
-          & > input {
-               padding: 4.9px 10.5px;
-          }
-     }
+	div.search-container {
+		& > input {
+			font-size: 14px;
+		}
+	}
 }
