--- a/src/front-end/home-page/styles/index/index.css
+++ b/src/front-end/home-page/styles/index/index.css
@@ -11,6 +11,7 @@
   --font-bold: poppins-bold, Arial, Helvetica, sans-serif;
   --primary-color: white;
   --regular-green: rgb(93, 212, 104);
+  --dark-green: rgb(83, 185, 94);
   --light-gray: rgb(236, 236, 236);
   --regular-gray: rgb(59, 59, 59);
   --dark-gray: rgb(20, 20, 20);
@@ -71,6 +72,9 @@ img {
 }
 
 button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   background-color: transparent;
   border: none;
