--- a/src/front-end/home-page/styles/aside/aside.css
+++ b/src/front-end/home-page/styles/aside/aside.css
@@ -1,14 +1,120 @@
-aside > div > div:first-of-type > img {
+aside > div > div:first-of-type > div > img {
   height: 17.5px;
 }
 
+div.cart-product-container > div > div {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  border-radius: 14px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  overflow: hidden;
+}
+div.cart-product-container > div > div > div:first-of-type {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  gap: 28px;
+  background-color: white;
+  padding: 21px;
+}
+div.cart-product-container > div > div > div:first-of-type > div:first-of-type {
+  width: 100%;
+  padding-bottom: 14px;
+}
+div.cart-product-container > div > div > div:first-of-type > div:first-of-type button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5.6px;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 7px;
+  font-size: 11.9px;
+  padding: 6.3px 10.5px;
+  font-family: var(--font-bold);
+  background-color: var(--primary-color);
+  color: white;
+}
+div.cart-product-container > div > div > div:first-of-type > div:first-of-type button i {
+  color: white;
+  font-size: 11.9px;
+}
+div.cart-product-container > div > div > div:first-of-type img {
+  width: 182px;
+  height: 182px;
+  border-radius: 14px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+div.cart-product-container > div > div > div:first-of-type > div:last-of-type {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+div.cart-product-container > div > div > div:first-of-type > div:last-of-type p {
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+div.cart-product-container > div > div > div:first-of-type > div:last-of-type > p:first-of-type {
+  color: var(--regular-gray);
+  font-size: 19.6px;
+  font-family: var(--font-bold);
+  padding: 0px 0px 5.6px 0px;
+}
+div.cart-product-container > div > div > div:first-of-type > div:last-of-type > p:nth-of-type(2) {
+  color: var(--regular-gray);
+  text-decoration: line-through;
+  font-size: 17.5px;
+  filter: opacity(70%);
+}
+div.cart-product-container > div > div > div:first-of-type > div:last-of-type > p:nth-of-type(3) {
+  color: var(--regular-green);
+  font-size: 28px;
+  font-family: var(--font-bold);
+}
+div.cart-product-container > div > div > div:first-of-type > div:last-of-type > p:last-of-type {
+  color: var(--regular-gray);
+  font-size: 17.5px;
+  filter: opacity(70%);
+}
+div.cart-product-container > div > div a {
+  display: flex;
+  gap: 5.6px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0px 0px 14px 14px;
+  color: white;
+  padding: 18.9px 0px;
+  font-size: 17.5px;
+  font-family: var(--font-bold);
+  background-color: var(--regular-green);
+  transition: ease-in-out 0.35s;
+}
+div.cart-product-container > div > div a:focus {
+  outline: none;
+  border: 2.1px solid rgb(0, 162, 255);
+}
+div.cart-product-container > div > div a:hover {
+  background-color: var(--dark-green);
+}
+div.cart-product-container > div > div a i {
+  font-size: 21px;
+}
+
 @media (min-width: 700px) {
-  aside > div > div:first-of-type > img {
+  aside > div > div:first-of-type > div > img {
     height: 18.9px;
   }
 }
 @media (min-width: 1000px) {
-  aside > div > div:first-of-type > img {
+  aside > div > div:first-of-type > div > img {
     height: 19.6px;
   }
 }
@@ -37,29 +143,28 @@ aside > button {
 aside > div {
   width: 315px;
   min-width: 315px;
-  background-color: white;
+  background-color: var(--light-gray);
   transition: ease-in-out 0.35s;
   transform: translate(100%);
   position: relative;
 }
 aside > div > div:first-of-type {
   display: flex;
-  gap: 35px;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 35px;
+  padding: 42px 21px 35px 21px;
   width: 100%;
   background-color: var(--primary-color);
 }
-aside > div > div:first-of-type > img {
+aside > div > div:first-of-type > div > img {
   filter: grayscale(100%) brightness(200%);
 }
-aside > div > div:first-of-type > div {
+aside > div > div:first-of-type > div > div {
   width: 100%;
+  margin-top: 35px;
   position: relative;
 }
-aside > div > div:first-of-type > div::before {
+aside > div > div:first-of-type > div > div::before {
   content: "";
   width: 100%;
   height: 1px;
@@ -69,9 +174,9 @@ aside > div > div:first-of-type > div::before {
   top: 50%;
   left: 50%;
 }
-aside > div > div:first-of-type > div p {
+aside > div > div:first-of-type > div > div p {
   text-align: center;
-  font-size: 13.3px;
+  font-size: 14px;
   font-family: var(--font-bold);
   padding: 14px;
   background-color: var(--primary-color);
@@ -82,8 +187,24 @@ aside > div > div:first-of-type > div p {
   left: 50%;
 }
 aside > div > div:last-of-type {
-  padding: 21px 28px;
+  padding: 21px 28px 224px 28px;
+  overflow-y: scroll;
   height: 100%;
+}
+
+div.cart-product-container > div {
+  transition: ease-in-out 0.35s;
+  overflow: hidden;
+  margin: 14px 0px;
+}
+div.cart-product-container > div:first-of-type {
+  margin-top: 0px;
+}
+div.cart-product-container > div:last-of-type {
+  margin-bottom: 0px;
+}
+div.cart-product-container > div > div {
+  width: 100%;
 }
 
 ul.categories-list li button {
@@ -107,7 +228,7 @@ ul.categories-list li button i:last-of-type {
   color: var(--dark-gray);
   font-family: var(--font-bold);
   font-style: normal;
-  font-size: 13.3px;
+  font-size: 14px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
