--- a/src/front-end/home-page/styles/aside/aside.scss
+++ b/src/front-end/home-page/styles/aside/aside.scss
@@ -1,123 +1,145 @@
 @import '../global/global.scss';
 
 aside {
-     &.--on {
-          pointer-events: all;
-          filter: opacity(100%);
+	&.--on {
+		pointer-events: all;
+		filter: opacity(100%);
 
-          & > div {
-                         transform: translate(0%);
-          }
-     }
+		& > div {
+			transform: translate(0%);
+		}
+	}
 
-     pointer-events: none;
-     filter: opacity(0%);
-     background-color: rgba(0, 0, 0, 0.253);
-     transition: ease-in-out 0.35s;
-     z-index: 4;
-     width: 100%;
-     height: 100vh;
-     display: flex;
-     position: fixed;
-     top: 0px;
-     
-     & > button {
-          width: 100%;
-     }
+	pointer-events: none;
+	filter: opacity(0%);
+	background-color: rgba(0, 0, 0, 0.253);
+	transition: ease-in-out 0.35s;
+	z-index: 4;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	position: fixed;
+	top: 0px;
 
-     & > div {
-          width: 315px;
-          min-width: 315px;
-          background-color: white;
-          transition: ease-in-out 0.35s;
-          transform: translate(100%);
-          position: relative;
+	& > button {
+		width: 100%;
+	}
 
-          & > div:first-of-type {
-               display: flex;
-               gap: 35px;
-               flex-direction: column;
-               justify-content: center;
-               align-items: center;
-               padding: 35px;
-               width: 100%;
-               background-color: var(--primary-color);
+	& > div {
+		width: 315px;
+		min-width: 315px;
+		background-color: var(--light-gray);
+		transition: ease-in-out 0.35s;
+		transform: translate(100%);
+		position: relative;
 
-			& > img {
-                    @extend %default-height-size;
-                    filter: grayscale(100%) brightness(200%);
-               }
+		& > div:first-of-type {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding: 42px 21px 35px 21px;
+			width: 100%;
+			background-color: var(--primary-color);
 
-               & > div {
-                    &::before {
-                         content: "";
-                         width: 100%;
-                         height: 1px;
-                         background-color: white;
-                         transform: translate(-50%, -50%);
-                         position: absolute;
-                         top: 50%;
-                         left: 50%;
-                    }
-                    
-                    width: 100%;
-                    position: relative;
+			& > div {
+				& > img {
+					@extend %default-height-size;
+					filter: grayscale(100%) brightness(200%);
+				}
 
-                    p {
-                         text-align: center;
-                         font-size: 13.3px;
-                         font-family: var(--font-bold);
-                         padding: 14px;
-                         background-color: var(--primary-color);
-                         color: white;
-                         transform: translate(-50%, -50%);
-                         position: absolute;
-                         top: 50%;
-                         left: 50%;
-                    }
-               }
-          }
+				& > div {
+					&::before {
+						content: '';
+						width: 100%;
+						height: 1px;
+						background-color: white;
+						transform: translate(-50%, -50%);
+						position: absolute;
+						top: 50%;
+						left: 50%;
+					}
 
-          & > div:last-of-type {
-               padding: 21px 28px;
-               height: 100%;
-          }
-     }
+					width: 100%;
+					margin-top: 35px;
+					position: relative;
+
+					p {
+						text-align: center;
+						font-size: 14px;
+						font-family: var(--font-bold);
+						padding: 14px;
+						background-color: var(--primary-color);
+						color: white;
+						transform: translate(-50%, -50%);
+						position: absolute;
+						top: 50%;
+						left: 50%;
+					}
+				}
+			}
+		}
+
+		& > div:last-of-type {
+			padding: 21px 28px 224px 28px;
+			overflow-y: scroll;
+			height: 100%;
+		}
+	}
+}
+
+div.cart-product-container {
+	& > div {
+		&:first-of-type {
+			margin-top: 0px;
+		}
+
+		&:last-of-type {
+			margin-bottom: 0px;
+		}
+
+		transition: ease-in-out 0.35s;
+		overflow: hidden;
+		margin: 14px 0px;
+
+		& > div {
+			@extend %product-container;
+			width: 100%;
+		}
+	}
 }
 
 ul.categories-list {
-     li {
-          button {
-               display: flex;
-               gap: 7px;
-               padding: 7px 0px;
-               width: 100%;
-               position: relative;
+	li {
+		button {
+			display: flex;
+			gap: 7px;
+			padding: 7px 0px;
+			width: 100%;
+			position: relative;
 
-               i:first-of-type {
-                    width: 8.4px;
-                    height: 8.4px;
-                    border-radius: 100%;
-                    background-color: var(--primary-color);
-               }
+			i:first-of-type {
+				width: 8.4px;
+				height: 8.4px;
+				border-radius: 100%;
+				background-color: var(--primary-color);
+			}
 
-               i:last-of-type {
-                    &:hover {
-                         color: var(--primary-color);
-                    }
+			i:last-of-type {
+				&:hover {
+					color: var(--primary-color);
+				}
 
-                    width: 100%;
-                    text-align: left;
-                    white-space: nowrap;
-                    transition: ease-in-out 0.35s;
-                    color: var(--dark-gray);
-                    font-family: var(--font-bold);
-                    font-style: normal;
-                    font-size: 13.3px;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-               }
-               
-          }
-     }
+				width: 100%;
+				text-align: left;
+				white-space: nowrap;
+				transition: ease-in-out 0.35s;
+				color: var(--dark-gray);
+				font-family: var(--font-bold);
+				font-style: normal;
+				font-size: 14px;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+		}
+	}
 }
