--- a/src/front-end/home-page/styles/main/main.css
+++ b/src/front-end/home-page/styles/main/main.css
@@ -3,7 +3,7 @@ div.product-section-container > div > div:last-of-type, div.product-section-cont
   padding-left: 24.5px !important;
 }
 
-div.loading-screen-container > img {
+div.loading-screen-container > div > img {
   height: 20.3px;
 }
 
@@ -15,9 +15,6 @@ div.product-section-container > div > div:last-of-type > div {
   z-index: 2;
   display: flex;
   flex-direction: column;
-  min-width: 280px;
-  max-width: 100%;
-  width: 100%;
   border-radius: 14px;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -101,12 +98,17 @@ div.product-section-container > div > div:last-of-type > div a {
   gap: 5.6px;
   align-items: center;
   justify-content: center;
+  border-radius: 0px 0px 14px 14px;
   color: white;
   padding: 18.9px 0px;
   font-size: 17.5px;
   font-family: var(--font-bold);
   background-color: var(--regular-green);
   transition: ease-in-out 0.35s;
+}
+div.product-section-container > div > div:last-of-type > div a:focus {
+  outline: none;
+  border: 2.1px solid rgb(0, 162, 255);
 }
 div.product-section-container > div > div:last-of-type > div a:hover {
   background-color: var(--dark-green);
@@ -120,7 +122,7 @@ div.product-section-container > div > div:last-of-type > div a i {
     padding-right: 35px !important;
     padding-left: 35px !important;
   }
-  div.loading-screen-container > img {
+  div.loading-screen-container > div > img {
     height: 21px;
   }
   div.product-section-container > div > div:first-of-type h1 {
@@ -132,7 +134,7 @@ div.product-section-container > div > div:last-of-type > div a i {
     padding-right: 84px !important;
     padding-left: 84px !important;
   }
-  div.loading-screen-container > img {
+  div.loading-screen-container > div > img {
     height: 22.4px;
   }
 }
@@ -148,12 +150,10 @@ main {
 }
 
 div.loading-screen-container {
-  filter: opacity(0%);
-  pointer-events: none;
+  z-index: 4;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 4;
   width: 100%;
   height: 100vh;
   background-color: var(--primary-color);
@@ -166,12 +166,25 @@ div.loading-screen-container.--off {
   filter: opacity(0%);
   pointer-events: none;
 }
-div.loading-screen-container > img {
+div.loading-screen-container > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 14px;
   filter: opacity(0%);
+}
+div.loading-screen-container > div.--on {
+  filter: opacity(100%);
+}
+div.loading-screen-container > div > img {
   transition: ease-in-out 0.56s;
 }
-div.loading-screen-container > img.--on {
-  filter: opacity(100%);
+div.loading-screen-container > div > div {
+  width: 0%;
+  transition: ease-in-out 0.35s;
+  height: 2.8px;
+  background-color: white;
+  border-radius: 70px;
 }
 
 div.propagandas-container {
@@ -200,6 +213,8 @@ div.propagandas-container > div:first-of-type img {
   width: 100vw;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: bottom;
+     object-position: bottom;
 }
 div.propagandas-container > p {
   border-radius: 4.9px;
@@ -268,14 +283,27 @@ div.product-section-container > div > div:last-of-type {
   overflow: scroll;
   padding: 14px 0px;
 }
-@media (pointer: none), (pointer: coarse) {
-  div.loading-screen-container > img {
-    transform: translateY(-200%);
+div.product-section-container > div > div:last-of-type > div {
+  width: 100%;
+  min-width: 280px;
+}
+
+@media (min-width: 500px) {
+  main {
+    padding-top: 140px;
+  }
+  div.propagandas-container > div:first-of-type img {
+    width: 100vw;
+    height: 35vw;
   }
 }
 @media (min-width: 700px) {
   main {
     padding: 84px 0px 140px 0px;
+  }
+  div.propagandas-container > div:first-of-type img {
+    width: 100vw;
+    height: auto;
   }
   div.product-section-container > div.--on::before {
     width: 420px;
