--- a/src/front-end/home-page/styles/main/main.scss
+++ b/src/front-end/home-page/styles/main/main.scss
@@ -1,7 +1,7 @@
 @import '../global/global';
 
 main {
-	padding: 126px 0px 140px 0px;
+	padding: 140px 0px;
 	background-color: var(--light-gray);
 }
 
